Fix overflow on very small devices

--- a/assets/css/navBar.css
+++ b/assets/css/navBar.css
@@ -129,7 +129,7 @@ a.nav-link:hover {
     flex-direction: column;
     position: fixed;
     top: 50px;
-    width: 60vw;
+    width: 70vw;
     left: -60vw;
     bottom: 0;
     visibility: hidden;
